# pyproject-examples

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.dependabot/: config.yml
.github/: auto_assign.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Source.rst  conf.py  contributing.rst  index.rst
doc-source/api/: pyproject-examples.rst
pyproject_examples/: __init__.py  example_configs.py  utils.py
