[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "pyproject-examples"
version = "0.0.0"
description = "Example pyproject.toml configs for testing."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/repo-helper/pyproject-examples"
"Issue Tracker" = "https://github.com/repo-helper/pyproject-examples/issues"
"Source Code" = "https://github.com/repo-helper/pyproject-examples"

[tool.mkrecipe]
conda-channels = [ "repo-helper",]
extras = "all"
license-key = "MIT"
package = "pyproject_examples"

[tool.importcheck]

[tool.whey]
base-classifiers = [ "Typing :: Typed",]
python-versions = [ "3.6",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "pyproject_examples"
