[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "pyproject-examples"
version = "2022.5.3"
description = "Example pyproject.toml configs for testing."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/repo-helper/pyproject-examples"
"Issue Tracker" = "https://github.com/repo-helper/pyproject-examples/issues"
"Source Code" = "https://github.com/repo-helper/pyproject-examples"

[tool.importcheck]
always = [ "pyproject_examples.example_configs", "pyproject_examples", "pyproject_examples.utils",]

[tool.whey]
base-classifiers = [ "Typing :: Typed",]
python-versions = [ "3.6",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "pyproject_examples"

[tool.mypy]
python_version = "3.6"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]
